# hep-paper-manager

./: .gitignore  README  README.md  cli.py  notebook.ipynb  paper_adder.py  papers.py  pyproject.toml  roadmap.txt  utils.py
.github/workflows/: test.yml
engines/: inspire.py  semantic.py
hpm/: __init__.py  cli.py  config.py  engines.py  papers.py  styles.py  tools.py  utils.py
hpm/engines/: __init__.py  inspire.py  semantic.py
hpm/notion/: __init__.py  client.py  database.py  page.py  properties.py  types.py
hpm/notion/objects/: database.py  page.py
hpm/plugins/: inspire_paper.py  semantic_and_inspire_paper.py
hpm/services/inspire_hep/: objects.py
hpm/services/notion/: client.py
hpm/services/notion/objects/: database.py  page.py  page_properties.py
hpm/templates/: paper.yml
notion/: database.py  types.py
tests/: conftest.py  property_examples.json  test_cli.py  test_client_database_functions.py  test_client_page_functions.py  test_properties.py
tests/services/inspire_hep/: author-1614261.json  author-2005171.json  job-2832881.json  paper-1405106.json  paper-1511.05190.json  paper-779080.json  test_inspire_client.py  test_inspire_objects.py
tests/services/notion/: empty_page.json  full_page.json  test_notion_client.py  test_notion_database_properties.py  test_notion_objects.py  test_notion_page_properties.py
