[tool.poetry]
name = "hpm"
version = "0.1.1"
description = ""
authors = ["Star9daisy <star9daisy@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
hpm = "hpm.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
rich = "^13.4.1"
typing-extensions = "^4.6.3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
deptry = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
